      no longer fail as a result of using sys.argv as a default argument
      to main(). (CNY-2786)
    * repository code handles correctly the removal of groups that
      include troves from other repositories. (CNY-2802)
    * When using sqlite, some temporary tables used the invalid column
      datatype of STRING instead of TEXT. This has been fixed. (CNY-2013)

  o Build Changes:
    * Removed defaultBasePackages configuration option as well as the
      functionality for loading recipes from the filesystem based
      on configuration.
    * Reworked recipe loading to make the code more understandable.
    * Implemented autoLoadRecipes configuration option. (CNY-2694)
    * Using the byDefault parameter to startGroup only determines the
      byDefault setting when the new group is added to its parent group.
      (CNY-2791)

  o Protocol Changes:
    * The commitCheck() xmlrpc API call has been added that will check
      commit permissions for a trovelist before having to send the 
      changeset for commit (CNY-2683)
  o Client Changes:
    * Added an option --exclude-groups to promote that allows the promotion
      of all the packages within a group without the promotion of the group
      itself. (CNY-2801)

Changes in 2.0.14:
  o Bug Fixes:
    * A bug causing python-setuptools to incorrectly appear to be an
      excessive build requirement has been fixed. (CNY-2738)
    * A bug in which python-setuptools was sometimes incorrectly not
      recognized as being needed in buildRequires has been fixed. (CNY-2772)
    * A regression has been fixed that caused rMake to abort when recursing
      through a group recipe that added troves with full versions. (CNY-2768)
    * When reporting possibly excessive buildRequires, not mentioning
      buildRequires at all in the recipe caused Conary to report the
      immediate superclass's buildRequires as the recipe's buildRequires.
      This bug has been resolved. (CNY-2769)