@@ -653,73 +653,12 @@ class MigrateTo_16(SchemaMigration):
 
 
 class MigrateTo_17(SchemaMigration):
-    Version = (17,0)
+    Version = (17,1)
 
-    # after the Dirnames table is created, we unwind each dirname and
-    # record pointers to all possible prefixes in the Prefixes table,
-    # which has two FKs back into Dirnames
-    def _createPrefixes(self):
-        logMe(2, "computing the dirname prefixes...")
-        cu = self.db.cursor()
-        cu.execute("""
-        create table tmpPrefixes (
-            dirnameId       INTEGER,
-            prefix          %(PATHTYPE)s
-        ) """ % self.db.keywords)
-        # seed the tmpPrefixes
-        cu.execute("insert into tmpPrefixes(prefix) "
-                   "select dirname from Dirnames")
-        while True:
-            cu.execute("select prefix from tmpPrefixes")
-            dirnames = [ x[0] for x in cu.fetchall() ]
-            if not dirnames:
-                break
-            cu.execute("delete from tmpPrefixes")
-            parents = set(os.path.dirname(x) for x in dirnames)
-            # load the new prefixes; filtering out '' and '/' makes
-            # sure the break above will happen at some point
-            self.db.bulkload("tmpPrefixes",
-                             ( [x] for x in parents if x not in ['', '/'] ),
-                             ["prefix"] )
-            # make sure each prefix shows up in the Dirnames table
-            cu.execute(""" insert into Dirnames(dirname)
-            select prefix from tmpPrefixes
-            where not exists ( select 1 from Dirnames
-                               where Dirnames.dirname = tmpPrefixes.prefix )""")
-        cu.execute("delete from tmpPrefixes")
-
-        # now produce a list of which prefixes belong to which dirname
-        logMe(2, "linking dirnames to prefixes")
-        cu.execute("select dirnameId, dirname from Dirnames")
-        prefixList = []
-        for dirnameId, dirname in cu.fetchall():
-            prefixes = _prefix(dirname)
-            prefixList += [ (dirnameId, x) for x in prefixes ]
-            if len(prefixList) > 100000:
-                self.db.bulkload("tmpPrefixes", prefixList, ["dirnameId", "prefix"])
-                prefixList = []
-        if prefixList:
-            self.db.bulkload("tmpPrefixes", prefixList, ["dirnameId", "prefix"])
-        self.db.createIndex("tmpPrefixes", "tmpPrefixesPrefixIdx", "prefix",
-                            check = False)
-        self.db.analyze("tmpPrefixes")
-
-        # finally, create the Prefixes table
-        logMe(2, "creating the Prefixes table")
-        self.db.dropForeignKey("Prefixes", name = "Prefixes_dirnameId_fk")
-        self.db.dropForeignKey("Prefixes", name = "Prefixes_prefixId_fk")
-        cu.execute("""insert into Prefixes (dirnameId, prefixId)
-        select tp.dirnameId, d.dirnameId
-        from Dirnames as d join tmpPrefixes as tp on d.dirname = tp.prefix """)
-        self.db.addForeignKey("Prefixes", "dirnameId", "Dirnames", "dirnameId")
-        self.db.addForeignKey("Prefixes", "prefixId", "Dirnames", "dirnameId")
-        cu.execute("drop table tmpPrefixes")
-        return
-    
     # given a FilePaths table that only has a path column, split that into
     # a (dirnameid, basenameId) tuple and create/update the corresponding
     # Dirnames and Basenames tables
-    def _createDirnames(self):
+    def _createFilePaths(self):
         logMe(2, "splitting paths in dirnames and basenames")
         cu = self.db.cursor()
         cu.execute("""
@@ -738,24 +677,29 @@ class MigrateTo_17(SchemaMigration):
         # drop the FK constraint from TroveFiles into FilePaths
         self.db.loadSchema()
         self.db.dropForeignKey("TroveFiles", name = "TroveFiles_filePathId_fk")
+        # create Dirnames, Basenames and the new FilePaths tables
         cu.execute("drop table FilePaths")
-        # create the Dirnames and the new FilePaths tables
         self.db.loadSchema()
         schema.createTroves(self.db, createIndex=False)
+
         # this is to avoid processing too many entries at once...
         sliceSize = 200000
-        counter = 0
+        analyze = 1
         while True:
             cu.execute("""
-            select filePathId, path from tmpFilePaths as fp
-            where not exists (select 1 from tmpDirnames as d where d.filePathId = fp.filePathId)
-            limit ?""", sliceSize)
+            select fp.filePathId, fp.path from tmpFilePaths as fp
+            left join tmpDirnames as d using(filePathId)
+            where d.filePathId is null limit ?""", sliceSize)
             tmpl = [ (_fpid, os.path.split(_path)) for _fpid,_path in cu.fetchall() ]
             if not tmpl:
                 break # no more entries found
             self.db.bulkload("tmpDirnames", [ (x[0], x[1][0], x[1][1]) for x in tmpl ],
                              ["filePathId", "dirname", "basename"])
-            counter += len(tmpl)
+            # don't analyze too often for speed reasons
+            analyze -= 1
+            if not analyze:
+                analyze = 5
+                self.db.analyze("tmpDirnames")
         self.db.createIndex("tmpDirnames", "tmpDirnames_dirname_idx", "dirname",
                             check = False)
         logMe(2, "extracting unique dirnames and basenames...")
@@ -765,51 +709,64 @@ class MigrateTo_17(SchemaMigration):
         insert into Dirnames(dirname)
         select distinct dirname from tmpDirnames
         order by dirname """)
+        self.db.analyze("Dirnames")
         cu.execute("""
         insert into Basenames(basename)
         select distinct basename from tmpDirnames
         order by basename """)
-        self.db.analyze("Dirnames")
         self.db.analyze("Basenames")
-        self._createPrefixes()
         
-    
-    # migrate to 17.0
-    def migrate(self):
-        # migrate FilesPath to a dirnames-based setup
-        logMe(1, "WARNING: this migration takes a LONG time. Do not interupt!")
-        self._createDirnames()
-        
-        # need to create a temp table first to avoid FK contention on Dirnames...
         logMe(2, "generating the new FilePaths table...")
-        cu = self.db.cursor()
-        cu.execute("""
-        create table tmpFP as
-        select fp.filePathId as filePathId, d.dirnameId as dirnameId,
-               b.basenameId as basenameId, fp.pathId as pathId
+        cu.execute("""insert into FilePaths(filePathId, dirnameId, basenameId, pathId)
+        select fp.filePathId, d.dirnameId, b.basenameId, fp.pathId
         from tmpFilePaths as fp
         join tmpDirnames as td using(filePathId)
         join Dirnames as d on td.dirname = d.dirname
         join Basenames as b on td.basename =  b.basename """)
-        # and now we insert into filepaths
-        cu.execute("""
-        insert into FilePaths (filePathId, dirnameId, basenameId, pathId)
-        select filePathId, dirnameId, basenameId, pathId from tmpFP """)
         cu.execute("drop table tmpFilePaths")
         cu.execute("drop table tmpDirnames")
-        cu.execute("drop table tmpFP")
-        # fix the atoincrement primary key value on the new filepaths
+        # fix the autoincrement primary key value on the new FilePaths
         cu.execute("select max(filePathId) from FilePaths")
         maxId = cu.fetchone()[0]
         self.db.setAutoIncrement("FilePaths", "filePathId", maxId)
         self.db.analyze("FilePaths")
+
         # re-enable the FK constraint and create indexes
-        logMe(3, "adding foreign key constraints and creating indexes...")
+        logMe(3, "adding foreign key constraints...")
         self.db.addForeignKey("TroveFiles", "filePathId", "FilePaths", "filePathId")
         self.db.analyze("TroveFiles")
         schema.createTroves(self.db)
+    
+    # migrate to 17.0
+    def migrate(self):
+        logMe(1, "WARNING: this migration takes a LONG time. Do not interupt!")
+        schema.setupTempTables(self.db)       
+        # migrate FilesPath to a dirnames-based setup
+        self._createFilePaths()
+        # prefixes will be created by the migration to schema version 17.1
+        self.db.analyze("Prefixes")
         return True
 
+    # migrate to 17.1
+    def migrate1(self):
+        # fix the missing dirnames/prefixes links
+        schema.setupTempTables(self.db)       
+        logMe(2, "looking for missing dirnames/prefixes links")
+        cu = self.db.cursor()
+        cu.execute("""select d.dirnameId, d.dirname
+        from ( select distinct fp.dirnameId as dirnameId
+               from FilePaths as fp
+               left join Prefixes as p using(dirnameId)
+               where p.dirnameId is null ) as dq
+        join Dirnames as d using(dirnameId)
+        """)
+        ret = cu.fetchall()
+        if ret:
+            logMe(2, "fixing missing dirnames/prefixes links in %d dirnames" % (len(ret),))
+            trovestore.addPrefixesFromList(self.db, ret)
+            self.db.analyze("Prefixes")
+        return True
+        
 def _getMigration(major):
     try:
         ret = sys.modules[__name__].__dict__['MigrateTo_' + str(major)]
